<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewCash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_horizontal"
        android:text="@string/cash_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewCash"
        android:background="@drawable/arrow_down"
        android:text="@string/buy_text" />

    <TextView
        android:id="@+id/textViewLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonBuy"
        android:layout_below="@+id/buttonBuy"
        android:layout_marginTop="30dp"
        android:text="@string/log_string" />

    <Button
        android:id="@+id/buttonCut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewLogs"
        android:layout_marginTop="26dp"
        android:background="@drawable/arrow_down"
        android:text="@string/cut_text" />

    <TextView
        android:id="@+id/textViewBlanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonCut"
        android:layout_below="@+id/buttonCut"
        android:layout_marginTop="35dp"
        android:text="@string/blank_string" />

    <Button
        android:id="@+id/buttonTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewBlanks"
        android:layout_centerHorizontal="true"
        android:background="@drawable/arrow_right"
        android:text="@string/turn_button_text" />

    <TextView
        android:id="@+id/textViewTurnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonFinish"
        android:layout_alignTop="@+id/buttonTurn"
        android:text="@string/turning_text" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCut"
        android:layout_alignBottom="@+id/buttonCut"
        android:layout_alignParentRight="true"
        android:background="@drawable/arrow_up"
        android:text="@string/finish_text" />
    
      <TextView
        android:id="@+id/textViewBats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLogs"
        android:layout_alignBottom="@+id/textViewLogs"
        android:layout_alignLeft="@+id/buttonSell"
        android:text="@string/bats_text" />

    <Button
        android:id="@+id/buttonSell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonBuy"
        android:layout_alignBottom="@+id/buttonBuy"
        android:layout_alignParentRight="true"
        android:background="@drawable/arrow_up"
        android:text="@string/sell_text" />

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTurn"
        android:layout_below="@+id/buttonTurn"
        android:layout_marginTop="44dp"
        android:background="@+drawable/update_elipse"
        android:text="@string/refresh_button"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="@android:color/white" />

</RelativeLayout>
